BraveBear/force-app/main/default/objects/Order__c/fields/CustomerTier__c.field-meta.xml
<CustomField>
    <fullName>CustomerTier__c</fullName>
    <formula>Account__r.Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerTier</label>
    <type>Text</type>
</CustomField>