BraveBear/force-app/main/default/objects/Order__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>