BraveBear/force-app/main/default/objects/Order__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <description>Auto calculated field, to display remaining amount</description>
    <formula>Final_Amount__c  -  Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto calculated field, to display remaining amount</inlineHelpText>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>