BraveBear/force-app/main/default/objects/Order__c/fields/Total_Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Ordered_Quantity__c</fullName>
    <description>Number total quantities</description>
    <label>Total Ordered Quantity</label>
    <summarizedField>Order_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>